--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        th {
+            background-color: gray;
+            color: white;
+        }
+        caption {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-    teste
+    <table border="1">
+
+    <caption >Catálogo de Produtos - Desenvolvimento Web</caption>
+        <tr>
+            <th>Produtos</th>
+            <th>Categoria</th>
+            <th>Preço</th>
+        </tr>
+        <tr>
+            <td>Faça Você mesmo: Comida Japonesa</td>
+            <td>DVD</td>
+            <td>R$55,00</td>
+        </tr>
+        <tr>
+            <td>Faça você mesmo: Comida Mexicana</td>
+            <td>DVD</td>
+            <td>R$42,00</td>
+            
+        </tr>
+        <tr>
+            <td>Faça você mesmo: Comida Árabe</td>
+            <td>VHS</td>
+            <td>R$39,00</td>
+        </tr>
 </body>
 </html>
